# auto-display

./: Cargo.toml  README.md  auto-display.service
src/: bin.rs  display.rs  lib.rs
